cmake_minimum_required(VERSION 3.22)
project(tft_display_lib LANGUAGES C)
add_library(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE src/lcd.c)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/minimal-cmake)
target_compile_features(${PROJECT_NAME} PRIVATE c_std_17)
